syntax = "proto3";

package prisel;
option csharp_namespace = "Prisel.Protobuf";

// keep sorted
import "prisel/broadcast_spec.proto";
import "prisel/chat_spec.proto";
import "prisel/create_room_spec.proto";
import "prisel/error_spec.proto";
import "prisel/get_lobby_state_spec.proto";
import "prisel/get_room_state_spec.proto";
import "prisel/join_spec.proto";
import "prisel/login_spec.proto";
import "prisel/room_state_change_spec.proto";

import "google/protobuf/any.proto";

message Payload {
  oneof payload {
    ChatPayload chat_payload = 1;
    BroadcastPayload broadcast_payload = 2;

    CreateRoomRequest create_room_request = 3;
    CreateRoomResponse create_room_response = 4;

    ErrorPayload error_payload = 5;

    GetLobbyStateResponse get_lobby_state_response = 6;

    GetRoomStateResponse get_room_state_response = 7;

    JoinRequest join_request = 8;
    JoinResponse join_response = 9;

    LoginRequest login_request = 10;
    LoginResponse login_response = 11;

    RoomStateChangePayload room_state_change_payload = 12;

    google.protobuf.Any action_payload = 15;
  }
}