syntax = "proto3";

package prisel;
option csharp_namespace = "Prisel.Protobuf";

import "prisel/player_info.proto";

message RoomStateSnapshot {
  repeated PlayerInfo players = 1;
  optional string host_id = 2;
  string token = 3;
}